fix: scrollbar styling

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,20 +1,45 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-html, body { 
-    height: 100%;
+html,
+body {
+  height: 100%;
+  scroll-behavior: smooth;
 }
 
-body { 
-    margin: 0; 
-    font-family: Roboto, "Helvetica Neue", sans-serif; 
-    background-color: #F3EEE8;
-    cursor: url(assets/arrow.svg), default;
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  background-color: #f3eee8;
+  cursor: url(assets/arrow.svg), default;
+}
+
+.hide-scrollbar ::-webkit-scrollbar {
+    opacity: 0 !important;
+  }
+
+::-webkit-scrollbar {
+  width: 8px;
+  transition: opacity 0.5s ease;
+}
+
+::-webkit-scrollbar-track {
+  background: #ffffff0b;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #727272;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #444;
 }
 
 @media (max-width: 640px) {
-    html, body {
-        overflow-x: hidden !important;
-        height: auto;
-    }
+  html,
+  body {
+    overflow-x: hidden !important;
+    height: auto;
+  }
 }
